samples/_failures_safe/1761431195_3bcb79_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_eb248589.c: In function ‘main’:
./samples/SAFE/__tmp_eb248589.c:159:16: error: ‘EX’ undeclared (first use in this function)
  159 |         return EX
      |                ^~
./samples/SAFE/__tmp_eb248589.c:159:16: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_eb248589.c:159:18: error: expected ‘;’ at end of input
  159 |         return EX
      |                  ^
      |                  ;
./samples/SAFE/__tmp_eb248589.c:159:9: error: expected declaration or statement at end of input
  159 |         return EX
      |         ^~~~~~
./samples/SAFE/__tmp_eb248589.c:159:9: error: expected declaration or statement at end of input
